--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -35,6 +35,6 @@ button:hover {
 }
 
 img {
+  display: block;
   max-width: 100%;
-  object-fit: cover;
 }
